@@ -69,6 +69,8 @@
 * Changed --list-conversions command line option to --list-derivations.
   And added --list-derivations option to harpdump.
 
+* Use NC_64BIT_OFFSET when storing data to netcdf larger than 1GB.
+
 0.4 2016-10-16
 ~~~~~~~~~~~~~~
 
